apps/socialdevs-frontend/deployment.yaml
# apps\socialdevs-frontend\deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socialdevs-frontend
  labels:
    app: socialdevs-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: socialdevs-frontend
  template:
    metadata:
      labels:
        app: socialdevs-frontend
    spec:
      containers:
        - name: frontend
          image: vhgalvez/socialdevs-public-frontend:1
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "500m"
              memory: "128Mi"
