apps/socialdevs-frontend/ingress.yaml
# apps\socialdevs-frontend\ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: socialdevs-frontend
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`public.socialdevs.site`)
      kind: Rule
      services:
        - name: socialdevs-frontend
          port: 80
  tls: {}  # 👈 permite a Traefik usar Let's Encrypt automáticamente
