apps/socialdevs-frontend/socialdevs-frontend-ingressroute-local.yaml
# apps/socialdevs-frontend/socialdevs-frontend-ingressroute-local.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: socialdevs-frontend-local
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`frontend.localhost`)
      kind: Rule
      services:
        - name: socialdevs-frontend
          port: 80
 tls:
    secretName: wildcard-socialdevs-tls
