apps/socialdevs-frontend/socialdevs-frontend-ingressroute-public.yaml
# apps/socialdevs-frontend/socialdevs-frontend-ingressroute-public.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: socialdevs-frontend-public
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`socialdevs.site`) || Host(`www.socialdevs.site`)
      kind: Rule
      services:
        - name: socialdevs-frontend
          port: 80
  tls: {}
